--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,11 @@
 			<version>RELEASE</version>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.5.2.Final</version>
+        </dependency>
+    </dependencies>
 
 </project>
