--- a/pom.xml
+++ b/pom.xml
@@ -22,12 +22,12 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.12.4</version>
-				<configuration>
-					<skipTests>true</skipTests>
-				</configuration>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-compiler-plugin</artifactId>
+			    <configuration>
+				<source>11</source>
+				<target>11</target>
+			    </configuration>
 			</plugin>
 		</plugins>
 	</build>
