--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,12 @@
 			<artifactId>pdfbox</artifactId>
 			<version>2.0.4</version>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>5.3.6</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
